--- a/MyProject/.settings/org.eclipse.wst.common.component
+++ b/MyProject/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="MyProject">
+        
+    <wb-module deploy-name="JSP_Project">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="MyProject"/>
-        <property name="java-output-path" value="/MyProject/build/classes"/>
+                
+        <property name="java-output-path" value="/JSP_Project/build/classes"/>
+        <property name="context-root" value="JSP_Project"/>
+            
     </wb-module>
+    
 </project-modules>
